/*
 * $Id: ChangeLog,v 1.99 2006-02-15 21:02:55 declan2005 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-02-15 15:59 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
  * source/h_report.prg
  *include/i_report.ch
     *  do report adjust and new NOFIXED parameter (space between lines)

2006-02-12 00:15 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_controlmisc.c
  * source/c_windows.c
  * source/h_windows.prg
    * Added hb_dynsymSymbol() declaration inside own source code.

2006-02-11 20:45 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/miniprint.prg
     *  little optimize

2006-02-11 18:30 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_report.prg
     *  little fixes in memo and logical expresions

2006-02-11 12:05 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * include/i_report.ch
     *  missing HEADING parameter

2006-02-11 00:15 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_window.ch
  * source/h_controlmisc.prg
    + Added .Object property to semi-OOP syntax.
  * source/h_browse.prg
  * source/h_button.prg
  * source/h_checkbox.prg
  * source/h_combo.prg
  * source/h_controlmisc.prg
  * source/h_datepicker.prg
  * source/h_frame.prg
  * source/h_grid.prg
  * source/h_image.prg
  * source/h_ipaddress.prg
  * source/h_label.prg
  * source/h_listbox.prg
  * source/h_media.prg
  * source/h_menu.prg
  * source/h_monthcal.prg
  * source/h_progressbar.prg
  * source/h_radio.prg
  * source/h_richeditbox.prg
  * source/h_scroll.prg
  * source/h_slider.prg
  * source/h_spinner.prg
  * source/h_status.prg
  * source/h_tab.prg
  * source/h_textbox.prg
  * source/h_timer.prg
  * source/h_toolbar.prg
  * source/h_tree.prg
  * source/h_windows.prg
    * Changed method's name ::New() to ::Register() in TControl's
      subclasses.