@@ -1,5 +1,5 @@
 /*
- * $Id: c_controlmisc.c,v 1.24 2006-02-12 17:46:00 guerra000 Exp $
+ * $Id: c_controlmisc.c,v 1.25 2006-02-19 05:05:10 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -116,7 +116,9 @@
 #include "tchar.h"
 #include "../include/oohg.h"
 
-extern HB_EXPORT PHB_SYMB    hb_dynsymSymbol( PHB_DYNS pDynSym );
+#ifndef _HB_API_INTERNAL_
+    #define hb_dynsymSymbol( pDynSym )  ( pDynSym )->pSymbol
+#endif
 
 PHB_SYMB *s_Symbols = NULL;
 
