@@ -1,5 +1,5 @@
 /*
- * $Id: c_windows.c,v 1.32 2006-02-12 17:46:00 guerra000 Exp $
+ * $Id: c_windows.c,v 1.33 2006-02-19 05:05:10 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -125,7 +125,9 @@
 #include <commctrl.h>
 #include "../include/oohg.h"
 
-extern HB_EXPORT PHB_SYMB    hb_dynsymSymbol( PHB_DYNS pDynSym );
+#ifndef _HB_API_INTERNAL_
+    #define hb_dynsymSymbol( pDynSym )  ( pDynSym )->pSymbol
+#endif
 
 BOOL Array2Rect(PHB_ITEM aRect, RECT *rc ) ;
 
