@@ -1,11 +1,17 @@
 /*
- * $Id: ChangeLog,v 1.99 2006-02-15 21:02:55 declan2005 Exp $
+ * $Id: ChangeLog,v 1.100 2006-02-19 05:05:10 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-02-18 23:03 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_controlmisc.c
+  * source/c_windows.c
+  * source/h_windows.prg
+    * Added hb_dynsymSymbol() as MACRO for older Harbour versions.
 
 2006-02-15 15:59 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
   * source/h_print.prg
